# git-author-analyzer

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: build-release.yml
scripts/: bump-version.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/__tests__/: basic.test.ts
src/components/: GitAnalyzer.vue
src/components/__tests__/: GitAnalyzer.test.ts
test/: e2e-test.cjs  integration.test.cjs  run-tests.cjs
