[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.0", features = ["full"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
strip = true
opt-level = 3
lto = true
